Bug #20434
mon metadata does not include ceph_version
0%
Description
on lab clsuter, after kraken -> luminous 12.1.0 upgrade,
root@mira049:~# ceph mon versions { "ceph version 12.1.0 (262617c9f16c55e863693258061c5b25dea5b086) luminous (dev)": 1, "unknown": 2 } root@mira049:~# ceph mon metadata [ { "name": "mira021", "addr": "172.21.4.136:6789/0", "arch": "x86_64", "ceph_version": "ceph version 12.1.0 (262617c9f16c55e863693258061c5b25dea5b086) luminous (dev)", "cpu": "Intel(R) Xeon(R) CPU X3440 @ 2.53GHz", "distro": "ubuntu", "distro_description": "Ubuntu 14.04.3 LTS", "distro_version": "14.04", "hostname": "mira021", "kernel_description": "#105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015", "kernel_version": "3.13.0-65-generic", "mem_swap_kb": "0", "mem_total_kb": "16425256", "os": "Linux" }, { "name": "mira049", "arch": "x86_64", "cpu": "Intel(R) Xeon(R) CPU X3430 @ 2.40GHz", "distro": "Ubuntu", "distro_codename": "trusty", "distro_description": "Ubuntu 14.04.3 LTS", "distro_version": "14.04", "hostname": "mira049", "kernel_description": "#105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015", "kernel_version": "3.13.0-65-generic", "mem_swap_kb": "16766972", "mem_total_kb": "16425176", "os": "Linux" }, { "name": "mira060", "arch": "x86_64", "cpu": "Intel(R) Xeon(R) CPU X3440 @ 2.53GHz", "distro": "Ubuntu", "distro_codename": "trusty", "distro_description": "Ubuntu 14.04.3 LTS", "distro_version": "14.04", "hostname": "mira060", "kernel_description": "#105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015", "kernel_version": "3.13.0-65-generic", "mem_swap_kb": "16766972", "mem_total_kb": "16425176", "os": "Linux" } ]
History
#1 Updated by Daniel Oliveira over 5 years ago
Just talked to Sage and looking into this.
#2 Updated by Daniel Oliveira over 5 years ago
Daniel Oliveira wrote:
Just talked to Sage and looking into this.
I just tested with Luminous branch (and also the Master) and they all work for me, at least with vstart.sh .
{
"ceph version 12.1.0 (262617c9f16c55e863693258061c5b25dea5b086) luminous (dev)": 3
}
[
{
"name": "a",
"addr": "137.65.133.148:40974/0",
"arch": "x86_64",
"ceph_version": "ceph version 12.1.0 (262617c9f16c55e863693258061c5b25dea5b086) luminous (dev)",
"cpu": "Intel(R) Core(TM) i7-4810MQ CPU @ 2.80GHz",
"distro": "opensuse",
"distro_description": "openSUSE Leap 42.2",
"distro_version": "42.2",
"hostname": "doliveira-opensuse-dev2.lab.suse.com",
"kernel_description": "#1 SMP Fri Jun 23 20:25:06 UTC 2017 (f462a66)",
"kernel_version": "4.4.73-18.17-default",
"mem_swap_kb": "50331644",
"mem_total_kb": "32555536",
"os": "Linux"
},
{
"name": "b",
"arch": "x86_64",
"ceph_version": "ceph version 12.1.0 (262617c9f16c55e863693258061c5b25dea5b086) luminous (dev)",
"cpu": "Intel(R) Core(TM) i7-4810MQ CPU @ 2.80GHz",
"distro": "opensuse",
"distro_description": "openSUSE Leap 42.2",
"distro_version": "42.2",
"hostname": "doliveira-opensuse-dev2.lab.suse.com",
"kernel_description": "#1 SMP Fri Jun 23 20:25:06 UTC 2017 (f462a66)",
"kernel_version": "4.4.73-18.17-default",
"mem_swap_kb": "50331644",
"mem_total_kb": "32555536",
"os": "Linux"
},
{
"name": "c",
"arch": "x86_64",
"ceph_version": "ceph version 12.1.0 (262617c9f16c55e863693258061c5b25dea5b086) luminous (dev)",
"cpu": "Intel(R) Core(TM) i7-4810MQ CPU @ 2.80GHz",
"distro": "opensuse",
"distro_description": "openSUSE Leap 42.2",
"distro_version": "42.2",
"hostname": "doliveira-opensuse-dev2.lab.suse.com",
"kernel_description": "#1 SMP Fri Jun 23 20:25:06 UTC 2017 (f462a66)",
"kernel_version": "4.4.73-18.17-default",
"mem_swap_kb": "50331644",
"mem_total_kb": "32555536",
"os": "Linux"
}
]
I am trying on different nodes (instead of vstart) as soon as I set it up.
#3 Updated by Joao Eduardo Luis over 5 years ago
- Assignee set to Joao Eduardo Luis
Assigning the issue to me as a place holder to remove the ticket from the pool of unassigned tickets. Daniel is working on it though, but assigning it to him seems impossible (likely he's not on some list).
#4 Updated by Nathan Cutler over 5 years ago
- Assignee changed from Joao Eduardo Luis to Daniel Oliveira
#5 Updated by Dan van der Ster over 5 years ago
Also just noticed this on a cluster updated from 12.0.3:
# ceph mon versions { "ceph version 12.0.3 (f2337d1b42fa49dbb0a93e4048a42762e3dffbbf)": 2, "ceph version 12.1.0 (262617c9f16c55e863693258061c5b25dea5b086) luminous (dev)": 1 }
vs
# ceph tell mon.* version mon.p06253939y31416: ceph version 12.1.0 (262617c9f16c55e863693258061c5b25dea5b086) luminous (dev) mon.p06253939y22952: ceph version 12.1.0 (262617c9f16c55e863693258061c5b25dea5b086) luminous (dev) mon.p06253939f44928: ceph version 12.1.0 (262617c9f16c55e863693258061c5b25dea5b086) luminous (dev)
#6 Updated by Daniel Oliveira over 5 years ago
Here it is the new output I get from a brand new installed cluster:
# ceph mon versions { "ceph version v12.1.0-289-g117b171715 (117b1717154e1236b2d37c405a86a9444cf7871d) luminous (dev)": 3 } # ceph mon metadata [ { "name": "sles12sp3-node2", "addr": "192.168.112.3:6789/0", "arch": "x86_64", "ceph_version": "ceph version v12.1.0-289-g117b171715 (117b1717154e1236b2d37c405a86a9444cf7871d) luminous (dev)", "cpu": "Westmere E56xx/L56xx/X56xx (Nehalem-C)", "distro": "sles", "distro_description": "SUSE Linux Enterprise Server 12 SP3", "distro_version": "12.3", "hostname": "sles12sp3-node2", "kernel_description": "#1 SMP Wed Jun 28 14:39:40 UTC 2017 (603ab76)", "kernel_version": "4.4.73-3-default", "mem_swap_kb": "2103292", "mem_total_kb": "1937172", "os": "Linux" }, { "name": "sles12sp3-node3", "arch": "x86_64", "ceph_version": "ceph version v12.1.0-289-g117b171715 (117b1717154e1236b2d37c405a86a9444cf7871d) luminous (dev)", "cpu": "Westmere E56xx/L56xx/X56xx (Nehalem-C)", "distro": "sles", "distro_description": "SUSE Linux Enterprise Server 12 SP3", "distro_version": "12.3", "hostname": "sles12sp3-node3", "kernel_description": "#1 SMP Wed Jun 28 14:39:40 UTC 2017 (603ab76)", "kernel_version": "4.4.73-3-default", "mem_swap_kb": "2103292", "mem_total_kb": "1937172", "os": "Linux" }, { "name": "sles12sp3-node4", "arch": "x86_64", "ceph_version": "ceph version v12.1.0-289-g117b171715 (117b1717154e1236b2d37c405a86a9444cf7871d) luminous (dev)", "cpu": "Westmere E56xx/L56xx/X56xx (Nehalem-C)", "distro": "sles", "distro_description": "SUSE Linux Enterprise Server 12 SP3", "distro_version": "12.3", "hostname": "sles12sp3-node4", "kernel_description": "#1 SMP Wed Jun 28 14:39:40 UTC 2017 (603ab76)", "kernel_version": "4.4.73-3-default", "mem_swap_kb": "2103292", "mem_total_kb": "1937172", "os": "Linux" } ] # ceph tell mon.* version mon.sles12sp3-node2: ceph version v12.1.0-289-g117b171715 (117b1717154e1236b2d37c405a86a9444cf7871d) luminous (dev) mon.sles12sp3-node3: ceph version v12.1.0-289-g117b171715 (117b1717154e1236b2d37c405a86a9444cf7871d) luminous (dev) mon.sles12sp3-node4: ceph version v12.1.0-289-g117b171715 (117b1717154e1236b2d37c405a86a9444cf7871d) luminous (dev)
At this point, I am wondering if it has more to do with different versions after a migrated server only?!
#7 Updated by Sage Weil over 5 years ago
- Assignee changed from Daniel Oliveira to Sage Weil
2017-07-05 15:44:47.192877 7f107b7fe700 1 -- 127.0.0.1:40858/0 <== mon.1 127.0.0.1:40859/0 4 ==== mon_metadata magic: 0 v1 ==== 542+0+0 (206275417 0 0) 0x7f105c020f30 con 0x562d64fcad30 2017-07-05 15:44:47.192888 7f107b7fe700 20 mon.a@0(leader) e1 _ms_dispatch existing session 0x7f103c005140 for mon.1 127.0.0.1:40859/0 2017-07-05 15:44:47.192893 7f107b7fe700 20 mon.a@0(leader) e1 caps allow * 2017-07-05 15:44:47.192895 7f107b7fe700 10 mon.a@0(leader) e1 handle_mon_metadata 2017-07-05 15:44:47.192968 7f107b7fe700 10 mon.a@0(leader).paxos(paxos recovering c 1..43) trigger_propose not active, will propose later
i think this should move into MonmapMonitor.
#8 Updated by Sage Weil over 5 years ago
- Status changed from 12 to Fix Under Review
#9 Updated by Sage Weil over 5 years ago
- Status changed from Fix Under Review to Resolved